Addressed hierarchy issue with modal text not wrapping properly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ label,
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 2;
 }
 
 #cancel {
@@ -257,7 +258,7 @@ label,
   top: 4rem;
 }
 
-.villager-info-modal {
+.modal-villager-info {
   top: 129px;
   position: fixed;
   width: 350px;
@@ -266,6 +267,7 @@ label,
   border: 1px solid #afafaf;
   border-radius: 15px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 3;
 }
 
 .villager-info-title {
@@ -466,15 +468,15 @@ input[type="checkbox"]:checked {
   flex-basis: 100%;
 }
 
+.column-fifty,
+.column-forty-five {
+  flex-basis: 100%;
+}
+
 @media screen and (max-width: 523px) {
   .nav-home {
     display: none;
   }
-}
-
-.column-fifty,
-.column-forty-five, {
-  flex-basis: 100%;
 }
 
 @media screen and (min-width: 523px) {
@@ -563,7 +565,7 @@ input[type="checkbox"]:checked {
     max-width: 850px;
   }
 
-  .villager-info-modal {
+  .modal-villager-info {
     width: 650px;
     height: 598px;
   }
